# spqr

./: classifier_comparison.py  illustration.py  pyproject.toml
spqr/: __init__.py  estimators.py  new_oracle.py  new_oracles_utils.py  oracle.py  wdr_estimators.py  wdr_risk_optimization.py
spqr/tests/: test_new_oracle.py  test_new_oracles_utils.py  test_oracle.py  test_wdr_estimators.py
